<resources>
    <string name="app_name">问界互动家园</string>
    <string name="loading_content">数据加载中，请稍候&#8230;</string>
    <string name="loading_empty">抱歉，暂无数据。</string>
    <string name="loading_failed">加载数据失败，点击重新加载。</string>
    <string name="version_unknown">未知版本</string>
    <string name="quit_app">再按一次，退出程序</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">QQ好友</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="share_copy_address">复制链接</string>
    <string name="login">登录</string>
    <string name="text_btn_init">百度账号绑定</string>
    <string name="text_btn_init1">更换百度账号</string>
    <string name="text_btn_on_push">打开Push</string>
    <string name="text_btn_off_push">关闭Push</string>
    <string name="log_tip">日志：</string>
    <string name="clear_log">清除日志</string>
    <string name="text_btn_rich">富媒体消息</string>
    <string name="text_btn_initAK">无账号绑定</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
    <string name="text_btn_aidl">轻应用AIDL</string>
    <string name="text_btn_off_lightapp">关闭所有轻消息</string>
    <string name="text_btn_off_app_msg">加入黑名单</string>
    <string name="text_btn_unread_only_msg">只获取未读消息</string>
    <string name="text_btn_on_shortcut">生成快捷图标</string>
    <string name="text_btn_showTags">列举标签</string>
    <string name="text_btn_unbind">解绑</string>
    <string name="text_btn_setunDisturb">免打扰时段</string>
    <string name="text_toast">设置成功，免打扰时段为：\n%1$s - %2$s</string>
    <string name="text_about">百度Push Android SDK 4.5.1\n\n更新时间:2015年6月18日\nChange Log：\n去除Frontia等相关内容，集成更加简便。\n增强端上加密和解密能力，升级so文件。\n增加重启保护机制，防止频繁调用接口造成的电量流失。\n增加SDK集成错误的提示和回调。\n解决数个引发崩溃的不常见bug。</string>
    <string name="text_help">百度hi官方技术讨论群：1405944\nQQ群：324533810（可加）\n云推送微信公众账号：云推送（微信号：baidu-push）\n</string>
    <string name="update_ok">更新</string>
    <string name="update_hint">更新提示</string>
    <string name="dialog_no">取消</string>
    <string name="can_select_photo_max">最多可以选%s张图片</string>
    <string name="all_photo">所有图片</string>
    <string name="please_choose_image">请选择图片</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_more_special_discuss">MoreSpecialDiscussActivity</string>
    <string name="save_pic">保存图片到本地</string>
    <string name="offLine">离线</string>
    <string name="video">视频</string>
    <string name="cameras_txt">我的</string>
    <string name="exit">确定退出</string>
    <string name="exit_tip">退出后将需要重新登录，确定要退出?</string>
    <string name="confirm">确定</string>
    <string name="certain">确定</string>
    <string name="wait">等待</string>
    <string name="next_button_txt">下一步</string>
    <string name="complete_txt">完成</string>
    <string name="operational_fail">操作失败</string>
    <string name="common_passwd_error">密码不正确</string>
    <string name="login_password_tv_txt">密码</string>
    <string name="web_login_button_txt">萤石OAuth协议登录</string>
    <string name="platform_login_button_txt">私有云后台对接授权</string>
    <string name="please_input_platform_accesstoken_txt">请输入私有云调用萤石开平的获取acToken接口后得到的acToken：</string>
    <string name="please_input_phonenumber_txt">请输入手机号码</string>
    <string name="update_exit">退出</string>
    <string name="sms_verify_code_received">请输入您收到的手机验证码</string>
    <string name="please_input_sign_txt">请输入您的json字符串</string>
    <string name="please_input_userid_txt">请输入您的userid</string>
    <string name="localmgt_video_square_txt">视频广场</string>
    <string name="wifi_set">配置Wi-Fi</string>
    <string name="added_camera_success_txt">添加成功</string>
    <string name="open_camera_fail">打开相机失败，请选择手动输入添加设备</string>
    <string name="serial_number_error">序列号错误</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_loading">正在加载，请稍候...</string>
    <string name="realplay_login_password_error">登录设备失败</string>
    <string name="realplay_login_password_msg">初始密码为设备验证码，若设备已注册平台，请输入用户ID</string>
    <string name="realplay_play_no_video_source">没有视频源</string>
    <string name="camera_not_online">设备不在线</string>
    <string name="remoteplayback_fail">视频播放失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="remoteplayback_connect_server_error">连接服务器失败，请重试</string>
    <string name="remoteplayback_connect_device_error">播放中断，请重试</string>
    <string name="remoteplayback_searchfile_fail_for_network">查询录像失败,请检查您的网络</string>
    <string name="remoteplayback_searchfile_fail_for_device">查询录像失败</string>
    <string name="remoteplayback_norecordfile">没有查询到录像</string>
    <string name="remoteplayback_norecordfile_alarm">没有查询到该时刻的报警录像</string>
    <string name="remoteplayback_capture_fail">抓图失败</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="scan_cue_txt">请将设备机身或说明书上的二维码放置在扫描框内，手机将自动识别</string>
    <string name="scan_title_txt">序列号扫描</string>
    <string name="get_camera_list_fail">获取设备列表失败</string>
    <string name="refresh">重试</string>
    <string name="later_alarm">消息推送</string>
    <string name="today">今天</string>
    <string name="select_date">请选择日期</string>
    <string name="detail_del_device_btn_tip">确定要删除设备？</string>
    <string name="detail_del_device_success">删除成功</string>
    <string name="message_no_data_text">无消息记录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_more">下拉加载更多...</string>
    <string name="xlistview_header_hint_loading">正在加载，请稍候...</string>
    <string name="xlistview_header_last_time">最近更新</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多...</string>
    <string name="xlistview_footer_hint_no_more_device">无更多设备</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_no_more">无更多</string>
    <string name="xlistview_footer_no_more_msg">无更多消息</string>
    <string name="get_message_fail_service_exception">获取事件消息失败</string>
    <string name="message_encrypt_inputpsw_tip_title">您的图片已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="message_refresh_fail_network_exception">获取事件消息失败，请检查您的网络</string>
    <string name="message_refresh_fail_server_exception">获取事件消息失败，服务器异常</string>
    <string name="message_come_from_tip">来自：</string>
    <string name="message_video">消息录像</string>
    <string name="message_live">现场直播</string>
    <string name="alarm_type_remotecontrol">发生紧急遥控按钮事件</string>
    <string name="alarm_type_infrared">发生人体感应事件</string>
    <string name="alarm_type_door">发生门磁报警</string>
    <string name="alarm_type_smoke">发生烟感报警</string>
    <string name="alarm_type_gas">发生可燃气体报警</string>
    <string name="alarm_type_water">发生水侵报警</string>
    <string name="alarm_type_urgent_button">发生紧急按钮报警</string>
    <string name="alarm_type_person_alarm">发生人体感应报警</string>
    <string name="ez_alarm_type_person_alarm">人体感应事件</string>
    <string name="alarm_type_motion_detection">发生移动侦测报警</string>
    <string name="alarm_type_baby_cry">发生婴儿啼哭报警</string>
    <string name="alarm_type_unknown">发生未知类型报警</string>
    <string name="alarm_message_del_fail_txt">删除失败</string>
    <string name="alarm_message_del_fail_network_exception">删除失败，请检查您的网络</string>
    <string name="local_network_exception">没有可用网络，请检查您的网络</string>
    <string name="push_event_get">收到</string>
    <string name="push_event_get_count">条推送消息。</string>
    <string name="push_event_from">来自：</string>
    <string name="get_device_picture_fail">获取设备图片失败</string>
    <string name="input_device_picture_uuid">请输入设备图片uuid</string>
    <string name="input_device_picture_size">请输入图片宽度(0-1280像素)</string>
    <string name="device_picture">设备图片uuid</string>
    <string name="input_device_video_uuid">请输入设备录像uuid</string>
    <string name="auto_wifi_title_add_device">设备添加</string>
    <string name="auto_wifi_dialog_connecting_msg">添加过程稍稍有点漫长，耐心等一会儿哦~</string>
    <string name="auto_wifi_connecting_msg1">请将手机靠近设备，添加过程大约需要等待1分钟，请稍候…</string>
    <string name="auto_wifi_connecting_msg2">正在注册到服务器，请稍候…</string>
    <string name="auto_wifi_connecting_msg3">正在添加设备，请稍候…</string>
    <string name="aotu_wifi_add_device_success">恭喜您，添加成功 ！</string>
    <string name="auto_wifi_connecting_failed">Wi-Fi连接失败，请重试或返回检查Wi-Fi密码是否输入正确</string>
    <string name="auto_wifi_register_failed">设备未连接到萤石云，请检查设备所在网络是否能正常上网后重试</string>
    <string name="auto_wifi_add_device_failed">添加失败，请重试</string>
    <string name="auto_wifi_dialog_title_wifi_required">需要将手机连接到Wi-Fi</string>
    <string name="auto_wifi_dialog_btn_wifi">连接Wi-Fi</string>
    <string name="auto_wifi_line_msg">请将您的设备和路由器用网线连接好</string>
    <string name="auto_wifi_line_connected">我已连接好</string>
    <string name="auto_wifi_line_connect">有线连接</string>
    <string name="auto_wifi_config_tip">正在使用手机连接的Wi-Fi网络，请输入密码，如无密码请点击下一步</string>
    <string name="auto_wifi_net">网络</string>
    <string name="auto_wifi_ssid">ssid</string>
    <string name="auto_wifi_cer_config_title">网络连接</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="talking">对讲中…</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="loading">加载中…</string>
    <string name="reset_10_sec_to_release">连接电源的状态下，长按设备的reset键10秒后松开</string>
    <string name="connect_device_to_router">请将您的设备和路由器用网线连接好，等待5s~10s至设备上线</string>
    <string name="if_your_device_has_set_time">如果你的设备已经设置了在线时间，则将会按照你设置的时间进行上下线</string>
    <string name="wired_connection">有线连接</string>
    <string name="if_your_device_has_been_used">如果你的设备之前已经被使用，请先复位设备</string>
    <string name="how_to_reset">如何复位？</string>
    <string name="already_reset">复位好了</string>
    <string name="please_open_wifi_network">请到“设置”-“Wi-Fi”功能中开启Wi-Fi并连接到网络</string>
    <string name="retry">重试</string>
    <string name="wifi_connection_finish_need_refresh">设备状态更新稍有延迟，需要等待5~10s的时间，请在“我的”界面手动刷新</string>
</resources>